data/derived/comb/progs/unify/prog7622.ml.out
Characters 161-162:
  List.fold_left f base l;;
                        ^
Error: This expression has type string but an expression was expected of type
         string list
